Inicio 06_runtime_view
Comienzo del apartado 6 de la documentación

--- a/docs/src/06_runtime_view.adoc
+++ b/docs/src/06_runtime_view.adoc
@@ -2,9 +2,16 @@ ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-runtime-view]]
 == Runtime View
+=== Login
 
+For the login, the app shows the login view, which asks the user for his username and his password.
 
-[role="arc42help"]
+Then, the app does a login request to the REST API server, which redirect the user to the identity provider, which handles the authentication.
+
+If the login is succesfully, ...
+In case the login isn't succesfully, a warning message is shown.
+
+== ESTRUCTURA
 ****
 .Contents
 The runtime view describes concrete behavior and interactions of the system’s building blocks in form of scenarios from the following areas:
