--- a/docs/src/04_solution_strategy.adoc
+++ b/docs/src/04_solution_strategy.adoc
@@ -13,22 +13,25 @@ This page contains a short summary and explanation of the fundamental decisions 
 ### Technology Decisions
 Below, all the technologies to be used in the development of the application are listed:
 
-JavaScript / React: A JavaScript library designed to facilitate the development of web applications.
-JavaScript / NodeJS: An asynchronous runtime environment based on JavaScript.
-MongoDB: A document-oriented NoSQL database system.
-Docker: Used for deploying applications locally.
-Azure: Used for deploying applications on a server.
-Top-Level Decisions
+* *JavaScript / React:* A JavaScript library designed to facilitate the development of web applications.
+* *JavaScript / NodeJS:* An asynchronous runtime environment based on JavaScript.
+* *MongoDB:* A document-oriented NoSQL database system.
+* *Docker:* Used for deploying applications locally.
+* *Azure:* Used for deploying applications on a server.
+
+---
+
+### Top-Level Decisions
 In this section, a summarized list of all decisions regarding the architecture of the application is included.
 
 |===
 
-| Architectural Pattern | In this project, the pattern based on the Client-Server model is used.
-| Frontend (Client) | React: Building the user interface
-| Backend (Server) | NodeJS: Building the server on the backend
+| *Architectural Pattern* | In this project, the pattern based on the Microservices model is used.
+| *Frontend (Client)* | React: Building the user interface
+| *Backend (Server)* | NodeJS: Building the server on the backend
 | | Mongoose: Interaction with the database
-| Database | MongoDB: NoSQL database storing data in BSON format
-| Deployment | Azure cloud services
+| *Database* | MongoDB: NoSQL database storing data in BSON format
+| *Deployment* | Azure cloud services
 
 |===
 
@@ -38,7 +41,7 @@ In this section, a summarized list of all decisions regarding the architecture o
 Next, several quality goals are established, along with the decisions made to achieve them.
 
 |===
-| Quality Goal | Decisions
+| *Quality Goal* | *Decisions*
 
 | Usability
 | Creation of a responsive interface adaptable to all types of screens.
@@ -61,10 +64,10 @@ Regarding the organization of the team, we have decided to use agile methodologi
 
 Practices to be followed:
 
-* Division of the project into tasks.
-* Equitable assignment of tasks.
-* Frequent meetings on the progress of the application.
-* Construction of "Alpha" versions before the final release.
+* Division of the project into *tasks*.
+* Equitable *assignment* of tasks.
+* Frequent *meetings* on the progress of the application.
+* Construction of *"Alpha"* versions before the final release.
 
 Additionally, "Issues" and the GitHub-provided Kanban (ToDo - In Progress - Done) are used for communication.
 
@@ -75,9 +78,9 @@ This section addresses the fundamental decisions for the project's architecture.
 
 |===
 
-| Data Management |
-| Deployment |
-| Security |
-| Monitoring |
+| *Data Management* |
+| *Deployment* |
+| *Security* |
+| *Monitoring* |
 
 |===
