Primera versión del 12_glossary.adoc

--- a/docs/src/12_glossary.adoc
+++ b/docs/src/12_glossary.adoc
@@ -34,9 +34,12 @@ See https://docs.arc42.org/section-12/[Glossary] in the arc42 documentation.
 |===
 |Term |Definition
 
-|<Term-1>
-|<definition-1>
+|<React>
+|<JavScript library, we make use of this User Interface library on the front-end>
 
-|<Term-2>
-|<definition-2>
+|<Docker>
+|<We use it to deploy applications within virtual containers>
+
+|<Node.js>
+|<JavaScript runtime environment, we make use of this on the back-end>
 |===
