--- a/docs/src/05_building_block_view.adoc
+++ b/docs/src/05_building_block_view.adoc
@@ -22,11 +22,20 @@ Detailed structure of the system. Focused on the components of the _User Interfa
 | *_Home_* 
 | Initial screen of the application. A welcome message is going to be displayed as well as the login and sign up options. 
 
+| *_Game_* 
+| Game screen where the user can play the game.
+
+| *_Ranking_* 
+| It contains the best scores recorded in the game, including the user's highest score and the scores of other users belonging to their group.
+
+| *_History_* 
+| Contains all user participations with the number of games, correct/incorrect answers, and times.
+
 | *_Help_*
 | Offers help to the user, so when he has any problem, he is able to sort out any possible problems.
 
 | *_About_*
-| Conteins important information about the project, like the development method, the developers and how to contact them.
+| Contains important information about the project, like the development method, the developers and how to contact them.
 
 | *_User session_*
 | Everything related to user session, by the session provider, such as Inrupt.
