--- a/docs/src/10_quality_requirements.adoc
+++ b/docs/src/10_quality_requirements.adoc
@@ -72,3 +72,21 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 .Form
 Tabular or free form text.
 ****
+
+* Usage Scenarios
+
+[options="header",cols="1,2,2"]
+|===
+|Quality Goal|Scenario|Response
+| Performance efficiency | The user wants to start answering questions. | The application generates a set of questions. This generation should be as fast as possible.
+| Usability | A new user starts using the application. | User should be able to do it without difficulty.
+| Security | The application must encript sensible data. | Data will be only accessible by its owner.
+|===
+
+* Change Scenarios
+
+[options="header",cols="1,2,2"]
+|===
+|Quality Goal|Scenario|Response
+| Maintainability | Introduce new functionality. | Reuse key components in order to easily add that new functionality.
+|===
