--- a/docs/src/11_technical_risks.adoc
+++ b/docs/src/11_technical_risks.adoc
@@ -1,8 +1,25 @@
-ifndef::imagesdir[:imagesdir: ../images]
-
 [[section-technical-risks]]
 == Risks and Technical Debts
+=== Risks
+[options="header",cols="1,2"]
+|===
+|Risk|Description
+|Teamwork failures
+|The distribution of tasks must be done effectively, so that if one member of the team does not perform an assigned task, it can be solved by another member.
+|Version management problems
+|Errors in version control can delay the project. Ignorance of the branches and their purpose can lead to code conflicts.
+|Lack of time
+|Not planning work well can result in difficulties meeting deadlines
+|Use of unknown technologies
+|The use of languages and technologies unknown to group members can make it difficult to perform assigned tasks
+|===
 
+=== Technical debts
+[options="header",cols="1,2"]
+|===
+|Risk|Description
+
+|===
 
 [role="arc42help"]
 ****
