--- a/docs/src/05_building_block_view.adoc
+++ b/docs/src/05_building_block_view.adoc
@@ -8,7 +8,33 @@ ifndef::imagesdir[:imagesdir: ../images]
 
 ==== Motivation
 
-*_WIQ_* application is the general structure of a system in which users will have the possibility to play a game like _Saber y Ganar_.
+*_WIQ_* application is the general structure of a system in which users will have the possibility to play a game like _Saber y Ganar_ and compare their results with their friends. 
+
+==== Contained building blocks
+
+[options="header",cols="1,3"] 
+|=== 
+
+| Name | Description
+
+| *_User_*
+| Client of the application which will interact with it. 
+
+| *_WIQ_*
+| System developed to be used by the users.
+
+|
+|
+
+|=== 
+
+=== Level 2
+
+==== Motivation
+
+
+
+==== Contained building blocks
 
 
 
