--- a/docs/src/03_system_scope_and_context.adoc
+++ b/docs/src/03_system_scope_and_context.adoc
@@ -1,75 +1,90 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-system-scope-and-context]]
-== System Scope and Context
+# System Scope and Context
 
 
 [role="arc42help"]
-****
-.Contents
-System scope and context - as the name suggests - delimits your system (i.e. your scope) from all its communication partners
-(neighboring systems and users, i.e. the context of your system). It thereby specifies the external interfaces.
+---
 
-If necessary, differentiate the business context (domain specific inputs and outputs) from the technical context (channels, protocols, hardware).
+## Contents
+### Scope and context
 
-.Motivation
-The domain interfaces and technical interfaces to communication partners are among your system's most critical aspects. Make sure that you completely understand them.
+This project aims to develop a quiz game.
+The main constraints are developing the game as a web app and using Wikidata to obtain the questions and answers.
 
-.Form
-Various options:
+---
 
-* Context diagrams
-* Lists of communication partners and their interfaces.
-
-
-.Further Information
-
-See https://docs.arc42.org/section-3/[Context and Scope] in the arc42 documentation.
-
-****
-
-
-=== Business Context
+## Business Context
 
 [role="arc42help"]
-****
-.Contents
-Specification of *all* communication partners (users, IT-systems, ...) with explanations of domain specific inputs and outputs or interfaces.
-Optionally you can add domain specific formats or communication protocols.
 
-.Motivation
-All stakeholders should understand which data are exchanged with the environment of the system.
+### Contents
 
-.Form
-All kinds of diagrams that show the system as a black box and specify the domain interfaces to communication partners.
+* *Users:* They interact directly with the application through the user interface provided by the frontend using React, HTML, CSS, and JavaScript.
+* *Wikidata API:* The application communicates with the Wikidata service to obtain questions and answers related to different topics. Requests are made using the HTTP protocol, and response data is received in JSON format.
 
-Alternatively (or additionally) you can use a table.
-The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
+---
 
-****
+### Motivation
 
-**<Diagram or Table>**
+Regarding the information exchanged with the application, it will require having a registered account to play, and it will also exchange information with a MongoDB database and Wikidata itself to obtain the questions.
 
-**<optionally: Explanation of external domain interfaces>**
+---
 
-=== Technical Context
+### Form
+
+|===
+
+| *Quiz Game* | *Comunication Partners* | *Inputs* | *Outputs*
+| Users | User Interface | User answers | Game questions
+| Wikidata API | API Service | Question requests | JSON Responses
+
+|===
+
+---
+
+### Context diagram
+[plantuml, "context", png]
+----
+component "App" as app
+
+:User: -> [app]: Answer question
+[app] -> User: Return result
+
+database DB
+[app] -> DB: Ask for question
+DB -> [app]: Return question
+
+component "WikiData" as wd
+[app] --> wd: Ask for keyword
+wd --> [app]: Return keyword
+----
+
+---
+
+## Technical Context
 
 [role="arc42help"]
-****
-.Contents
-Technical interfaces (channels and transmission media) linking your system to its environment. In addition a mapping of domain specific input/output to the channels, i.e. an explanation which I/O uses which channel.
 
-.Motivation
-Many stakeholders make architectural decision based on the technical interfaces between the system and its context. Especially infrastructure or hardware designers decide these technical interfaces.
+### Contents
 
-.Form
-E.g. UML deployment diagram describing channels to neighboring systems,
-together with a mapping table showing the relationships between channels and input/output.
+* *HTTP Channel:* The application uses the HTTP protocol to communicate with the Wikidata API service.
+* *MongoDB Data Channel:* Interactions with the MongoDB database allow for storing and retrieving questions and answers.
 
-****
+---
 
-**<Diagram or Table>**
+### Deployment diagram
+[plantuml, "deployment", png]
+----
+node "Aplication Server" as app
+node "DB Server" as db {
+artifact "MongoDB Server"
+}
+node Wikidata as w
+node Interface as i
 
-**<optionally: Explanation of technical interfaces>**
-
-**<Mapping Input/Output to Channels>**
+app - db
+app -- w
+app -- i
+----
