--- a/docs/src/08_concepts.adoc
+++ b/docs/src/08_concepts.adoc
@@ -1,73 +1,39 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-concepts]]
-== Cross-cutting Concepts
+## First Designs
 
+### Home Page
+:imagesdir: ../images
+image::HomeView.png[Home Menu View]
+---
+### Game page
+image::GameView.png[Game View]
+---
 
-[role="arc42help"]
-****
-.Content
-This section describes overall, principal regulations and solution ideas that are relevant in multiple parts (= cross-cutting) of your system.
-Such concepts are often related to multiple building blocks.
-They can include many different topics, such as
+## Cross-cutting Concepts
 
-* models, especially domain models
-* architecture or design patterns
-* rules for using specific technology
-* principal, often technical decisions of an overarching (= cross-cutting) nature
-* implementation rules
+### Maintainability:
 
+We designed the application in a modular way to facilitate its maintenance and task division.
+We separated functions for reuse in different parts of the code, such as React components.
 
-.Motivation
-Concepts form the basis for _conceptual integrity_ (consistency, homogeneity) of the architecture. 
-Thus, they are an important contribution to achieve inner qualities of your system.
+### Usability:
 
-Some of these concepts cannot be assigned to individual building blocks, e.g. security or safety. 
+We researched user needs to design a simple and intuitive interface.
+We employed a user-centered approach and followed recommended usability guidelines such as font size, interface colors, etc.
 
+### Security:
 
-.Form
-The form can be varied:
+We store only essential information with user passwords encrypted for security.
+Unregistered users will not be able to access others' information.
 
-* concept papers with any kind of structure
-* cross-cutting model excerpts or scenarios using notations of the architecture views
-* sample implementations, especially for technical concepts
-* reference to typical usage of standard frameworks (e.g. using Hibernate for object/relational mapping)
+### Testing:
+Usability and functionality tests are conducted to gather feedback and create the best possible product.
 
-.Structure
-A potential (but not mandatory) structure for this section could be:
+### Expansions:
+Various expansions to the application are proposed, such as a multiplayer version or adaptability to mobile devices.
 
-* Domain concepts
-* User Experience concepts (UX)
-* Safety and security concepts
-* Architecture and design patterns
-* "Under-the-hood"
-* development concepts
-* operational concepts
-
-Note: it might be difficult to assign individual concepts to one specific topic
-on this list.
-
-image::08-Crosscutting-Concepts-Structure-EN.png["Possible topics for crosscutting concepts"]
-
-
-.Further Information
-
-See https://docs.arc42.org/section-8/[Concepts] in the arc42 documentation.
-****
-
-
-=== _<Concept 1>_
-
-_<explanation>_
-
-
-
-=== _<Concept 2>_
-
-_<explanation>_
-
-...
-
-=== _<Concept n>_
-
-_<explanation>_
+### Data persistence and availability:
+Application data is stored using MongoDB, one of the most commonly used NoSQL databases.
+The application can be deployed at any time locally or in an environment such as a virtual machine.
