--- a/docs/src/09_architecture_decisions.adoc
+++ b/docs/src/09_architecture_decisions.adoc
@@ -14,3 +14,5 @@ ifndef::imagesdir[:imagesdir: ../images]
 | NodeJS | It is decided to use NodeJS since it is the recommended option by the subject's faculty and one of the most widely used technologies in this area of web applications, thus having extensive documentation and examples available on the Internet.
 | React | It is decided to use React since it is the recommended option by the subject's faculty.
 |===
+
+[role="arc42help"]
